✨️#38: 회원 패키지와 코어 패키지 UserRole 전환
전역적으로 사용되는 UserRole 은 Core 에 두고, 회원 패키지 안의 Core는 회원 안에서만 사용할 수 있도록 수정했습니다. 그래서 User 엔티티 안에는 Core 의 UserRole로 치환하는 편의 메서드를 구현했습니다.