@@ -1,11 +1,12 @@
 package com.friday.commerce.user.application.dto.response;
 
 import com.friday.commerce.user.domain.entity.User;
-import com.friday.commerce.user.domain.entity.UserRole;
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 import lombok.AccessLevel;
 import lombok.Builder;
+import com.friday.commerce.core.security.model.UserRole;
 
 @Builder(access = AccessLevel.PRIVATE)
 public record SignUpResponse(
@@ -14,14 +15,9 @@ public record SignUpResponse(
         String username,
         UserRole userRole,
         LocalDateTime createdAt,
-        LocalDateTime updatedAt,
-        Long updatedBy,
-        LocalDateTime deletedAt,
-        Long deletedBy,
         boolean isLocked,
         UserAgreement userAgreement,
         List<UserAddress> userAddresses
-
 ) {
 
     public static SignUpResponse from(User user) {
@@ -29,38 +25,34 @@ public record SignUpResponse(
                 .userId(user.getUserId())
                 .email(user.getEmail())
                 .username(user.getUsername())
-                .userRole(user.getUserRole())
+                .userRole(user.toCoreRole()) // 내부 enum → core enum 변환
                 .createdAt(user.getCreatedAt())
-                .updatedAt(user.getUpdatedAt())
-                .updatedBy(user.getUpdatedBy())
-                .deletedAt(user.getDeletedAt())
-                .deletedBy(user.getDeletedBy())
-                .isLocked(user.getIsLocked())
+                .isLocked(Boolean.TRUE.equals(user.getIsLocked()))
                 .userAgreement(UserAgreement.from(user))
                 .userAddresses(UserAddress.from(user))
                 .build();
     }
 
     @Builder(access = AccessLevel.PRIVATE)
-    record UserAgreement(
+    public record UserAgreement(
             boolean termsOfService,
             boolean privacy,
             boolean marketing,
             LocalDateTime agreedAt
     ) {
-
         public static UserAgreement from(User user) {
-            return UserAgreement.builder()
-                    .termsOfService(user.getUserAgreement().isTermsOfService())
-                    .privacy(user.getUserAgreement().isPrivacy())
-                    .marketing(user.getUserAgreement().isMarketing())
-                    .agreedAt(user.getUserAgreement().getAgreedAt())
-                    .build();
+            var ua = user.getUserAgreement();
+            return new UserAgreement(
+                    ua.isTermsOfService(),
+                    ua.isPrivacy(),
+                    ua.isMarketing(),
+                    ua.getAgreedAt()
+            );
         }
     }
 
     @Builder(access = AccessLevel.PRIVATE)
-    record UserAddress(
+    public record UserAddress(
             Long addressId,
             String zipCode,
             String addressLine1,
@@ -69,19 +61,18 @@ public record SignUpResponse(
             String state,
             boolean isDefault
     ) {
-
         public static List<UserAddress> from(User user) {
             return user.getUserAddresses().stream()
-                    .map(address -> UserAddress.builder()
-                            .addressId(user.getUserAddresses().getFirst().getAddressId())
-                            .zipCode(user.getUserAddresses().getFirst().getZipCode())
-                            .addressLine1(user.getUserAddresses().getFirst().getAddressLine1())
-                            .addressLine2(user.getUserAddresses().getFirst().getAddressLine2())
-                            .city(user.getUserAddresses().getFirst().getCity())
-                            .state(user.getUserAddresses().getFirst().getState())
-                            .isDefault(user.getUserAddresses().getFirst().getIsDefault())
-                            .build()
-                    ).toList();
+                    .map(addr -> new UserAddress(
+                            addr.getAddressId(),
+                            addr.getZipCode(),
+                            addr.getAddressLine1(),
+                            addr.getAddressLine2(),
+                            addr.getCity(),
+                            addr.getState(),
+                            Boolean.TRUE.equals(addr.getIsDefault())
+                    ))
+                    .collect(Collectors.toList());
         }
     }
 }
